--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <java.version>1.8</java.version>
         <kotlin.version>1.2.41</kotlin.version>
         <jackson.version>2.9.5</jackson.version>
-        <spring-kafka.version>2.0.4.RELEASE</spring-kafka.version>
+        <spring-kafka.version>1.3.2.RELEASE</spring-kafka.version>
         <junit.jupiter.version>5.2.0</junit.jupiter.version>
         <junit.platform.version>1.2.0</junit.platform.version>
     </properties>
@@ -55,6 +55,18 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
             <version>${jackson.version}</version>
         </dependency>
 
