--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>kafka-retry-poc</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <name>kafka-retry-poc</name>
+    <name>spring-kafka-retry-poc</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,9 +23,26 @@
         <kotlin.version>1.2.41</kotlin.version>
         <jackson.version>2.9.5</jackson.version>
         <spring-kafka.version>1.3.4.RELEASE</spring-kafka.version>
-        <junit.jupiter.version>5.2.0</junit.jupiter.version>
+        <spring-kafka-retry.version>1.0.0-SNAPSHOT</spring-kafka-retry.version>
         <junit.platform.version>1.2.0</junit.platform.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>internal-zup</id>
+            <name>Internal Release Repository</name>
+            <url>http://archiva.aws.zup.com.br/repository/internal/</url>
+        </repository>
+
+        <repository>
+            <id>snapshots-zup</id>
+            <name>Internal Snapshot Repository</name>
+            <url>http://archiva.aws.zup.com.br/repository/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <dependencies>
 
@@ -71,9 +88,27 @@
         </dependency>
 
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
+            <groupId>io.zup</groupId>
+            <artifactId>spring-kafka-retry</artifactId>
+            <version>${spring-kafka-retry.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <version>${spring-kafka.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.nhaarman</groupId>
+            <artifactId>mockito-kotlin-kt1.1</artifactId>
+            <version>1.5.0</version>
             <scope>test</scope>
         </dependency>
 
